force-app/main/default/objects/DistributorPointCode__c/DistributorPointCode__c.object-meta.xml
<CustomObject>
    <description>L&apos;oggetto ha la funzione di memorizzare i codice o porzioni di codici dei punti assegnati a specifici distributori.</description>
    <label>Codice Punto Distributore</label>
    <nameField>
        <displayFormat>DPC-{0000}</displayFormat>
        <label>Nome</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Codici Punto Distributore</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>