force-app/main/default/objects/DistributorPointCode__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relazione del codice punto al distributore</description>
    <label>Distributore</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Codici Punto Distributore</relationshipLabel>
    <relationshipName>Codici_Punto_Distributore</relationshipName>
    <type>Lookup</type>
</CustomField>