force-app/main/default/objects/DistributorPointCode__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <description>Indica la commodity per la quale il codice si applica</description>
    <label>Commodity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>