force-app/main/default/objects/DistributorPointCode__c/fields/PointCode__c.field-meta.xml
<CustomField>
    <fullName>PointCode__c</fullName>
    <description>Indica il codice del punto o porzione di esso</description>
    <label>Codice punto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>