force-app/main/default/objects/DistributorPointCode__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Commodity__c</columns>
    <columns>City__c</columns>
    <columns>Account__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>